--- a/inventory/src/components/SnooCharacter.css
+++ b/inventory/src/components/SnooCharacter.css
@@ -1,7 +1,7 @@
 .snoo-character {
   position: fixed;
-  bottom: 20px;
-  left: 20px;
+  bottom: 0%;
+  left: 0%;
   z-index: 10;
   opacity: 0.8;
 }
