Replace all grey colors with orange

--- a/inventory/src/App.css
+++ b/inventory/src/App.css
@@ -41,7 +41,7 @@
   align-items: center;
   position: relative;
   z-index: 2;
-  background: #666666;
+  background: #ff5801;
   border-radius: 0 20px 0 0;
 }
 
