--- a/inventory/src/components/CardDetailPanel.css
+++ b/inventory/src/components/CardDetailPanel.css
@@ -100,7 +100,7 @@
 .detail-image-container {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 300px;
   border-radius: 15px;
   overflow: hidden;
   border: 2px solid rgba(255, 255, 255, 0.3);
@@ -108,6 +108,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .detail-image {
@@ -238,7 +239,7 @@
   }
   
   .detail-image-container {
-    height: 500px;
+    height: 250px;
   }
   
   .panel-content {
